--- a/src/components/Container/Contact/Contact.scss
+++ b/src/components/Container/Contact/Contact.scss
@@ -7,19 +7,34 @@
     border-radius: 2rem;
     overflow: hidden;
     padding: 2rem;
-    align-items: center;
+
     justify-content: center;
 
+    @media screen and (max-width:850px) {
+        flex-direction: column;
+
+        
+    }
+
     .contact_left_container{
+        display: flex;
+        width: 50%;
+        padding: 1rem;
+        flex-direction: column;
+        justify-content: space-between;
+        @media screen and (max-width:850px) {
+            width:100%;
     
+            
+        }
         h3{
-            font-size: 1.5rem;
-            margin-bottom: 0.8rem;
+            font-size: 1.8rem;
+            margin-bottom: 0.5rem;
         }
         .contact_text
         {
             font-size: 0.85rem;
-            margin-bottom: 0.8rem;
+            margin-bottom: 0.5rem;
         }
         .contact_left{
             display: flex;
@@ -28,8 +43,8 @@
             margin: 0.5rem 0;
 
             .icon{
-                width: 50px;
-                height: 50px;
+                min-width: 50px;
+                min-height: 50px;
                 border-radius: 50%;
                 background: #8c12f0;
                 color: #fff;
@@ -43,14 +58,82 @@
         }
         .social_icons{
             display: flex;
-            margin-top: 1rem;
-            div{
-                margin-right: 1rem;
+            margin-top: 2rem;
+           gap: 1rem;
+            a{
+                transition: all ease 0.3s;
+                
+                color: rgb(32, 32, 32);
                 cursor: pointer;
                 &:hover{
-                    opacity: 0.8;
+                    opacity: 0.7;
+                }
+                svg{
+                    font-size: 1.3rem;
                 }
             }
         }
+    }
+    .contact_right{
+        padding: 1rem;
+        h3{
+            font-size: 1.8rem;
+            margin-bottom: 1rem;
+        }
+        .row{
+            width: 100%;
+            flex-direction: row;
+            display: flex;
+            flex-basis: auto;
+            gap: 0.8rem;
+            
+
+            input{
+                width: 100%;
+                border: none;
+                outline: none;
+                margin-bottom: 0.5rem;
+                background: #d6d6d683;
+                padding: 1rem 1.5rem;
+                font-family: "Poppins";
+                border-radius: 10px;
+                transition: all ease 0.3s;
+                
+                &:focus {
+                    background: #55555587;
+                }
+            }
+            textarea{
+                width: 100%;
+                min-height: 150px;
+                border: none;
+                outline: none;
+                margin-bottom: 0.5rem;
+                background: #d6d6d683;
+                padding: 1rem 1.5rem;
+                font-family: "Poppins";
+                border-radius: 10px;
+                resize: none;
+                &:focus {
+                    background: #55555587;
+                }
+            }
+           
+        }
+        .btn{
+            margin-top: 1rem;
+            background: #8c12f0;
+            padding: 0.5rem 1rem;
+            margin: 1rem auto 0rem auto;
+            width: 5rem;
+            border-radius:15px;
+            text-align: center;
+            
+
+            a{
+                color: white;
+                text-decoration: none;
+            }
+            }
     }
 }
