--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@ body {
     background: #131212;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
+    overflow-x: hidden; 
+    
 }
 img {
     width: 100%;
