--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -144,4 +144,25 @@
       }
     }
   
+
 }
+.back-btn{
+    position: fixed;
+    z-index: 15;
+    bottom: 0rem;
+    right: 0;
+    margin: 1rem;
+    height: 40px;
+    width: 40px;
+    align-items: center;
+    display: flex;
+    text-decoration: none;
+    
+    justify-content: center;
+    border-radius: 10px;
+    background: #fff;
+    svg{
+      font-size: 1.2rem;
+      color: #000;
+    }
+  }
