--- a/src/components/Container/About/About.scss
+++ b/src/components/Container/About/About.scss
@@ -1,5 +1,6 @@
 .about_container {
   display: grid;
+  margin-top: 4rem;
   grid-template-columns: repeat(2, 1fr);
   place-items: center;
   position: relative;
@@ -11,7 +12,7 @@
   .about_left {
     background: #8c12f0;
     max-width: 350px;
-    height: 350px;
+    height: 400px;
     justify-self: center;
     // border-radius: 10px;
     box-shadow: 0 0 10px #8c12f0;
@@ -25,6 +26,7 @@
   .about_right {
     color: #fff;
     padding: 1rem;
+  
     display: flex;
     flex-direction: column;
 
@@ -35,7 +37,7 @@
     }
 
     p {
-      font-size: 0.95rem;
+      font-size: 1rem;
       margin-bottom: 1rem;
       max-width: 450px;
     }
